--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 "HelloWorld" 
-https://kkaya10.github.io/Kerberos Authentication Protocols.html
+
+<link href="https://kkaya10.github.io/Kerberos Authentication Protocols.html" rel="stylesheet">
+<link rel="alternate" hreflang="ja" href="https://kkaya10.github.io/Kerberos Authentication Protocols.html"> 
